--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -11,11 +11,13 @@
   "devDependencies": {
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "@types/node": "^20.11.24",
     "eslint": "^9.0.0",
     "typescript": "^5.4.2"
   },
   "dependencies": {
+    "next": "^15.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
-} 
+}
