feat: update docs

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "micro-frontend-demo",
   "private": true,
+  "license":"MIT",
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
